flux/apps/openweb-ui/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: openwebui
    namespace: extra-tools
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:MOIUWx8QvbgzXXx3T1fFehbZsrDGSTgHI8S0K93xCg==,iv:/pzKdzg20exymy42BLQyfXS+sBTuyxrfDq7J52wv7TY=,tag:IBiuDTruYonCoCCVtwt4Hw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: open-webui
              port: 8080
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4cTdZK0Zha3llTng1aXY3
[...]
            gif0zXuzRKGVCWKpA4s09PFSiVHNNlpWh5+Ad9QIga6Q3CUzlQja3w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-02T07:45:49Z"
    mac: ENC[AES256_GCM,data:4xqqaqhvMEQT7trwl4joPeRMPPx8KL8SB7dIwXIj+x797v1YezedAFrcFqVgNgjHgjkw7Zm/WgNnG9Hw0qyOtAR/Q/HcDC3TKDaSmshY80aNGqK/3cFa6xblMBOyNfAG/1zdbXa4z6THsp9CvV+mkvR4DP0i0WAiFyeIyeOAiYY=,iv:dA+UV6KXnxwSD8LpE50+d2V3Zo//mPXCtbtm42be6/8=,tag:48LPkYQOMt2zW5DxGLPnSA==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
